--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
     <div class="footer">
       <span>You have <span class="pendingTasks"></span> pending tasks</span>
       <button>Clear All</button>
+	   <center><div class="credit"><a href="Download/index.html" target="_blank">APK DWONLOAD</a></div></center>
     </div>
   </div>
-
   <script src="script.js"></script>
-
+  <center><div class="credit">Created By <a href="https://allcoding-bls.pages.dev/" target="_blank">KIANCHONGYT</a></div></center>
+    </div>
+  </div>
 </body>
 </html>
